# BumperBot_V1

./: README.md
install/: local_setup.sh  setup.sh
install/bumperbot_controller/lib/bumperbot_controller/: noisy_controller
install/bumperbot_controller/share/bumperbot_controller/: package.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_lifecycle_node  simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber  simple_tf_kinematics  simple_turtlesim_kinematics
install/bumperbot_cpp_examples/share/ament_index/resource_index/package_run_dependencies/: bumperbot_cpp_examples
install/bumperbot_cpp_examples/share/ament_index/resource_index/parent_prefix_path/: bumperbot_cpp_examples
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: local_setup.sh  package.sh
install/bumperbot_description/share/bumperbot_description/: local_setup.sh  package.sh
install/bumperbot_firmware/include/bumperbot_firmware/: bumperbot_interface.hpp
install/bumperbot_firmware/lib/bumperbot_firmware/: simple_serial_transmitter
install/bumperbot_firmware/share/ament_index/resource_index/package_run_dependencies/: bumperbot_firmware
install/bumperbot_firmware/share/ament_index/resource_index/parent_prefix_path/: bumperbot_firmware
install/bumperbot_firmware/share/bumperbot_firmware/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/bumperbot_firmware/share/bumperbot_firmware/cmake/: bumperbot_firmwareConfig.cmake
install/bumperbot_firmware/share/launch/: hardware_interface.launch.py
install/bumperbot_localization/lib/bumperbot_localization/: imu_republisher
install/bumperbot_localization/share/bumperbot_localization/: local_setup.sh  package.sh
install/bumperbot_msgs/share/bumperbot_msgs/: local_setup.sh  package.sh
install/bumperbot_msgs/share/bumperbot_msgs/cmake/: export_bumperbot_msgs__rosidl_generator_pyExport.cmake
install/bumperbot_py_examples/share/bumperbot_py_examples/: package.sh
log/: latest_build  latest_list
src/bumperbot_cpp_examples/: CMakeLists.txt
src/bumperbot_cpp_examples/src/: simple_lifecycle_node.cpp
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_ros2_control.xacro
src/bumperbot_firmware/: CMakeLists.txt  package.xml
src/bumperbot_firmware/firmware/simple_motor_code/: simple_motor_code.ino
src/bumperbot_firmware/src/: BumperbotHardware.cpp  BumperbotHardware.xml  transmitter.cpp
