<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bumperbot_firmware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chaitanya@todo.todo">chaitanya</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>libserial-dev</depend>
  <depend>std_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
